--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,11 +1,10 @@
 version: 0.2
 phases:
   install:
-    runtime-versions:
-      nodejs: 16
-    commands:
-      - echo "Installing dependencies..."
-      - npm install
+  runtime-versions:
+    nodejs: 16
+  commands:
+    - npm install --legacy-peer-deps
   build:
     commands:
       - echo "Building project..."
